--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,41 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/main_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sparovcek"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginRight="180dp"
+                android:layout_marginLeft="20dp"
+                tools:layout_editor_absoluteX="39dp"
+                tools:layout_editor_absoluteY="198dp"
+                />
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@mipmap/ic_launcher_foreground"
+                android:src="@mipmap/ic_launcher_foreground"/>
+        </android.support.v7.widget.Toolbar>
+
         <EditText
             android:id="@+id/nameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="148dp"
             android:ems="10"
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,8 +61,8 @@
             android:id="@+id/pinText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginTop="40dp"
             android:ems="10"
             android:inputType="textPassword|numberPassword"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +73,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="84dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginTop="100dp"
             android:onClick="login"
             android:text="Login"
             app:layout_constraintStart_toStartOf="parent"
