--- a/app/src/main/res/layout/activity_overview_graph.xml
+++ b/app/src/main/res/layout/activity_overview_graph.xml
@@ -12,11 +12,32 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/main_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pregled"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:layout_marginRight="180dp"
+                android:textStyle="bold"
+                android:layout_marginLeft="20dp"
+                tools:layout_editor_absoluteX="39dp"
+                tools:layout_editor_absoluteY="198dp" />
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:srcCompat="@mipmap/ic_launcher_foreground"
+                android:src="@mipmap/ic_launcher_foreground"/>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
