--- a/app/src/main/res/layout/activity_user_history.xml
+++ b/app/src/main/res/layout/activity_user_history.xml
@@ -47,34 +47,20 @@
                 tools:srcCompat="@mipmap/ic_launcher_foreground" />
         </android.support.v7.widget.Toolbar>
 
-        <ScrollView
-            android:id="@+id/scrollView2"
-            android:layout_width="368dp"
-            android:layout_height="495dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/main_toolbar">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-        </ScrollView>
-
-        <TextView
-            android:id="@+id/izpis"
-            android:layout_width="368dp"
-            android:layout_height="494dp"
-            android:layout_marginStart="8dp"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="64dp"
-            android:layout_marginEnd="8dp"
-            android:textSize="18sp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:scrollbars="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
 
     </android.support.constraint.ConstraintLayout>
 
