--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,29 +30,28 @@
                 android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sparovcek"
+                android:text="Šparovcek                                "
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:layout_marginRight="180dp"
-                android:layout_marginLeft="20dp"
                 tools:layout_editor_absoluteX="39dp"
-                tools:layout_editor_absoluteY="198dp"
-                />
+                tools:layout_editor_absoluteY="198dp" />
+
             <android.support.v7.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:srcCompat="@mipmap/ic_launcher_foreground"
-                android:src="@mipmap/ic_launcher_foreground"/>
+                android:src="@mipmap/ic_launcher_foreground"
+                tools:srcCompat="@mipmap/ic_launcher_foreground" />
         </android.support.v7.widget.Toolbar>
 
         <EditText
             android:id="@+id/nameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="84dp"
             android:layout_marginTop="148dp"
             android:ems="10"
+            android:hint="Username"
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -61,10 +60,11 @@
             android:id="@+id/pinText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginStart="84dp"
+            android:layout_marginTop="36dp"
             android:ems="10"
-            android:inputType="textPassword|numberPassword"
+            android:hint="Password"
+            android:inputType="numberPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
@@ -72,7 +72,7 @@
             android:id="@+id/button_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
+            android:layout_marginStart="148dp"
             android:layout_marginTop="100dp"
             android:onClick="login"
             android:text="Login"
@@ -83,7 +83,7 @@
             android:id="@+id/button_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="208dp"
+            android:layout_marginStart="148dp"
             android:onClick="register"
             android:text="Register"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,11 +91,12 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="15dp"
-            android:layout_marginStart="84dp"
-            android:layout_marginBottom="168dp"
+            android:layout_width="285dp"
+            android:layout_height="72dp"
+            android:layout_marginStart="56dp"
+            android:layout_marginBottom="204dp"
             android:textColor="@android:color/holo_red_light"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
