--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -18,19 +18,18 @@
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sparovcek"
+            android:text="Vnos                                           "
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_marginRight="180dp"
-            android:layout_marginLeft="20dp"
-            tools:layout_editor_absoluteX="39dp"
-            tools:layout_editor_absoluteY="198dp"
-            />
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="15dp" />
+
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher_foreground"
+            tools:layout_editor_absoluteX="62dp"
             tools:srcCompat="@mipmap/ic_launcher_foreground" />
     </android.support.v7.widget.Toolbar>
 
@@ -39,12 +38,14 @@
         android:id="@+id/dodajvnosbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="64dp"
         android:text="Dodaj vnos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="444dp" />
+        app:layout_constraintTop_toBottomOf="@+id/toggleButton"
+        app:layout_constraintVertical_bias="0.936" />
 
 
     <EditText
@@ -65,6 +66,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
+        android:hint="€"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />
@@ -116,20 +118,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="8dp"
         android:checked="false"
-        android:nestedScrollingEnabled="false"
-        android:selectAllOnFocus="false"
         android:text="ToggleButton"
-        android:textIsSelectable="false"
         android:textOff="-"
         android:textOn="+"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.239"
+        app:layout_constraintHorizontal_bias="0.222"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/znesek" />
+
+    <TextView
+        android:id="@+id/napaka"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="28dp"
+        android:textColor="@android:color/holo_red_light"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </android.support.constraint.ConstraintLayout>
