--- a/app/src/main/res/layout/activity_overview_graph.xml
+++ b/app/src/main/res/layout/activity_overview_graph.xml
@@ -24,38 +24,55 @@
                 android:id="@+id/toolbar_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="180dp"
                 android:text="Pregled"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
-                android:layout_marginRight="180dp"
                 android:textStyle="bold"
-                android:layout_marginLeft="20dp"
                 tools:layout_editor_absoluteX="39dp"
                 tools:layout_editor_absoluteY="198dp" />
+
             <android.support.v7.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:srcCompat="@mipmap/ic_launcher_foreground"
-                android:src="@mipmap/ic_launcher_foreground"/>
+                android:src="@mipmap/ic_launcher_foreground"
+                tools:srcCompat="@mipmap/ic_launcher_foreground" />
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include
         android:id="@+id/include"
-        layout="@layout/content_overview_graph" />
+        layout="@layout/content_overview_graph"
+        android:layout_height="509dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
-        android:layout_width="86dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="132dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginRight="20dp"
         android:clickable="true"
-        app:backgroundTint="@color/colorPrimary"
+        android:onClick="plus"
+        android:src="@android:drawable/ic_menu_add"
+        app:backgroundTint="@color/colorPrimaryDark"
         app:layout_anchor="@+id/include"
         app:layout_anchorGravity="right|top"
-        tools:srcCompat="@android:drawable/ic_input_add"
-        android:src="@android:drawable/ic_input_add"/>
+        tools:srcCompat="@android:drawable/ic_input_add" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton2"
+        android:layout_width="78dp"
+        android:layout_height="69dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:clickable="true"
+        android:src="@android:drawable/ic_menu_preferences"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="left|top"
+        tools:srcCompat="@android:drawable/ic_input_add" />
 
 
 </android.support.design.widget.CoordinatorLayout>
