--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -44,6 +44,7 @@
         android:layout_marginStart="90dp"
         android:layout_marginTop="164dp"
         android:ems="10"
+        android:hint="Novo geslo"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -52,8 +53,8 @@
         android:id="@+id/odjava"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="271dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="72dp"
         android:onClick="odjava"
         android:text="Odjava"
         app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +65,7 @@
         android:id="@+id/spremenigeslo"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="241dp"
-        android:layout_marginEnd="0dp"
+        android:layout_marginTop="244dp"
         android:onClick="spremenigeslo"
         android:text="Spremeni geslo"
         app:layout_constraintEnd_toEndOf="@+id/ponastavi"
@@ -75,11 +75,14 @@
         android:id="@+id/ponastavi"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="123dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="160dp"
         android:onClick="ponastavi"
         android:text="Ponastavi podatke"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spremenigeslo"
+        app:layout_constraintVertical_bias="0.923" />
 
 </android.support.constraint.ConstraintLayout>
