--- a/app/src/main/res/layout/content_overview_graph.xml
+++ b/app/src/main/res/layout/content_overview_graph.xml
@@ -11,12 +11,13 @@
     <lecho.lib.hellocharts.view.PieChartView
         android:id="@+id/spendingChart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="319dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="124dp"
+        android:layout_marginBottom="176dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
