--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="164dp"
         android:ems="10"
         android:hint="Novo geslo"
-        android:inputType="textPersonName"
+        android:inputType="numberPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
